--- a/src/main/resources/static/css/itemadd.css
+++ b/src/main/resources/static/css/itemadd.css
@@ -88,3 +88,25 @@ button {
     align-items: center;
     cursor: pointer;
 }
+
+td, th {
+    border: 1px solid #777;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+table {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-collapse: collapse;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tbody tr:nth-child(odd) {
+    background: #eee;
+}
+caption {
+    font-size: 0.8rem;
+}
