Categories management portal added 02.26

--- a/src/main/resources/templates/additem.html
+++ b/src/main/resources/templates/additem.html
@@ -86,7 +86,7 @@
             <a th:href="@{/admin/modify/{id} (id=${iteminfo.getId()})}">
             <button>Modyfikuj</button>
             </a>
-            <a th:href="@{/admin/delete/{id} (id=${iteminfo.getId()})}">
+            <a th:href="@{/admin/item/delete/{id} (id=${iteminfo.getId()})}">
             <button>Usuń</button>
             </a>
         </td>
