--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,9 +18,11 @@
 
 <h1>Witaj ADMIN, wybierz odpowiednie opcje w prawym górnym rogu.</h1>
 <a th:href="@{/admin/additem}">
-    <button>Dodaj produkty</button>
+    <button>Dodaj/usun/modyfikuj produkty</button>
 </a>
-<button>Dodaj kategorie</button>
+<a th:href="@{/admin/addcategories}">
+<button>Dodaj/usun/modyfikuj kategorie</button>
+</a>
 <button>Nieaktywny</button>
 
 </body>
