--- a/src/main/resources/templates/categorymodify.html
+++ b/src/main/resources/templates/categorymodify.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
             <td>
-                <a th:href="@{/admin/category/modify/{id} (id=${category.getCategoryId()})}">
+                <a th:href="@{/admin/category/modify/{id}}">
                 <button type="submit">Zmień nazwę</button>
                 </a>
             </td>
