Layout changes and few validations added 02.28

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -94,3 +94,13 @@ body {
     text-align: center;
     margin-top: 15px;
 }
+
+.side img {
+    transition-duration: 600ms;
+}
+
+.side img:hover {
+    transition-duration: 600ms;
+    filter: grayscale(75%);
+
+}
