--- a/src/main/resources/static/css/itemadd.css
+++ b/src/main/resources/static/css/itemadd.css
@@ -55,10 +55,12 @@ nav a img {
     height: 90%;
 }
 
-form {
-    width: 300px;
-    font-size: 15px;
-    margin: 0 auto;
+h1 {
+    margin-top: 3%;
+}
+form, h1{
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 form input {
@@ -69,8 +71,6 @@ form input {
 }
 
 button {
-    margin: auto;
-    margin-top: 15px;
     font-weight: 0;
     font-size: 14px;
     color: #fff;
@@ -81,8 +81,6 @@ button {
     border-radius: 50px;
     transition: 1000ms;
     transform: translateY(0);
-    display: flex;
-    flex-direction: row;
     align-items: center;
     cursor: pointer;
 }
@@ -107,4 +105,9 @@ tbody tr:nth-child(odd) {
 }
 caption {
     font-size: 0.8rem;
+}
+
+p {
+    color: red;
+    text-align: center;
 }
