--- a/src/main/resources/static/css/registerstyle.css
+++ b/src/main/resources/static/css/registerstyle.css
@@ -88,3 +88,13 @@ section p {
     color: rgb(0, 140, 255);
     margin-top: 5px;
 }
+
+.side img {
+    transition-duration: 600ms;
+}
+
+.side img:hover {
+    transition-duration: 600ms;
+    filter: grayscale(75%);
+
+}
