--- a/src/main/resources/templates/addcategories.html
+++ b/src/main/resources/templates/addcategories.html
@@ -9,12 +9,14 @@
 
 <body>
 <nav>
-    <ul>
-        <li></li>
+    <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
+    <ul>>
         <li><a th:href="@{/}">OrionStore</a></li>
         <li><a href="">Ustawienia</a></li>
     </ul>
 </nav>
+
+<h1>Dodaj kategorię</h1>
 
 <form th:action="@{/admin/addcategories}" method="post" th:object="${category}" class="form">
     <table>
@@ -24,12 +26,17 @@
             <br>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <button type="submit">Dodaj</button>
             </td>
         </tr>
     </table>
 </form>
+
+<div class="error" th:if="${param.fail}">
+    <p>Wystąpił błąd, kategoria już istnieje lub próbujesz usunąć kategorię do której przypisane są przedmioty.</p>
+    <p>Usuń wszystkie przedmioty przypisane do danej kategorii w celu jej usunięcia.</p>
+</div>
 
 <table id="example">
     <thead>
