--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,8 +9,8 @@
 
 <body>
 <nav>
+    <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
-        <li></li>
         <li><a th:href="@{/}">OrionStore</a></li>
         <li><a href="">Ustawienia</a></li>
     </ul>
