--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -9,7 +9,7 @@
 
 <body>
 <nav>
-    <a th:href="@{/}"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
+    <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
@@ -27,7 +27,9 @@
         <p th:text="${item.getCategory().getCategoryName()}"></p>
         <p th:text="${item.getItemName()}"></p>
         <p th:text="${item.getPrice()} + zł"></p>
+        <a th:href="@{/card/additem/{id} (id=${item.getId()})}">
         <button>Dodaj do koszyka</button>
+        </a>
     </div>
 </div>
 <p id="numberofitems" th:text="${item.getQuantity()} + | sztuk - tyle posiadamy na stanie |"></p>
