--- a/src/main/resources/templates/homecategory.html
+++ b/src/main/resources/templates/homecategory.html
@@ -9,9 +9,8 @@
 
 <body>
 <nav>
-    <a th:href="@{/}"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
+    <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
-        <li></li>
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
@@ -27,15 +26,15 @@
     <p th:text="${info}"></p>
 </div>
 
-<div class="sorting-buttons">
-    <label for="first">Sortuj po:</label>
-    <a th:href="@{/sort/desc}">
-        <button id="first">Cena: Malejąco</button>
-    </a>
-    <a th:href="@{/sort/asc}">
-        <button id="second">Cena: Rosnąco</button>
-    </a>
-</div>
+<!--<div class="sorting-buttons">-->
+<!--    <label for="first">Sortuj po:</label>-->
+<!--    <a th:href="@{/sort/desc}">-->
+<!--        <button id="first">Cena: Malejąco</button>-->
+<!--    </a>-->
+<!--    <a th:href="@{/sort/asc}">-->
+<!--        <button id="second">Cena: Rosnąco</button>-->
+<!--    </a>-->
+<!--</div>-->
 
 <div class="content">
     <div class="item" th:each="item : ${items}">
