--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,9 @@
             </div>
         </form>
         <div class="side">
-            <img src="css/orionimg.png">
+            <a th:href="@{/}">
+                <img src="css/orionimg.png">
+            </a>
         </div>
     </div>
 </section>
