--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
     <meta charset="UTF-8">
@@ -11,26 +11,31 @@
 <nav>
     <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
-        <li></li>
+            <li id="admin" sec:authorize="hasAuthority('ADMIN')">
+                <a th:href="@{/admin}">ADMIN PANEL</a>
+            </li>
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
         <li><a th:href="@{/categories}">Kategorie</a></li>
         <li><a href="">Koszyk</a></li>
-        <li></li>
         <li>
-            <div class="login"><a th:href="@{/login}">Logowanie</a></div>
+            <div th:each="usermail : ${email}">
+                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
+            </div>
         </li>
     </ul>
 </nav>
-<div class="hello" th:each="info : ${username}">
-    <p th:text="${info}"></p>
+<div class="hello">
+    <p th:text="${username}"></p>
 </div>
 
 <div class="hello">
     <form th:action="@{/}" method="post" th:object="${searcheditem}" class="form">
         <label for="search">Wyszukaj: </label>
-        <input type="text" id="search" name="search" placeholder="Wyszukaj i naciśnij enter..." th:field="*{itemName}"></p>
+        <input type="text" id="search" name="search" placeholder="Wyszukaj i naciśnij enter..."
+               th:field="*{itemName}"></p>
     </form>
 </div>
 
