--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -19,6 +19,14 @@ nav {
     width: 100%;
 }
 
+label.logo {
+    color: white;
+    font-size: 25px;
+    line-height: 60px;
+    margin-right: 20px;
+    padding: 0 50px;
+}
+
 nav ul {
     float: right;
     margin-right: 15px;
@@ -48,20 +56,15 @@ nav a img {
     height: 90%;
 }
 
-h1 {
-    text-align: center;
-}
-
-body button {
-    margin: auto;
-    margin-top: 15px;
+button {
+    margin: 15px auto auto;
     font-weight: 0;
     font-size: 14px;
     color: #fff;
     background-color: rgba(171, 43, 43, 1);
     padding: 10px 30px;
     border: 2px solid rgba(171, 43, 43, 1);
-    box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+    box-shadow: rgb(0, 0, 0);
     border-radius: 50px;
     transition: 1000ms;
     transform: translateY(0);
@@ -71,7 +74,7 @@ body button {
     cursor: pointer;
 }
 
-body button:hover {
+button:hover {
 
     transition: 500ms;
     padding: 10px 50px;
@@ -85,4 +88,68 @@ body button:hover {
     color: #ffffff;
     background-color: black;
     font-size: 19px;
+}
+
+td, th {
+    border: 1px solid #777;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+table {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-collapse: collapse;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tbody tr:nth-child(odd) {
+    background: #eee;
+    color: rgba(171, 43, 43, 1);
+}
+caption {
+    font-size: 0.8rem;
+}
+
+td img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+table {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-collapse: collapse;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tbody tr:nth-child(odd) {
+    background: #eee;
+    color: rgba(171, 43, 43, 1);
+}
+caption {
+    font-size: 0.8rem;
+}
+
+td img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: 25%;
+    margin-right: 25%;
 }
