--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -11,14 +11,23 @@
 <nav>
     <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
+        <li id="admin" sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin}">ADMIN PANEL</a>
+        </li>
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
-        <li><a href="">Kontakt</a></li>
-        <li><a href="">Koszyk</a></li>
-        <li><a href="">Ustawienia</a></li>
+        <li><a th:href="@{/categories}">Kategorie</a></li>
+        <li><a th:href="@{/cart}" th:text="|Koszyk:(| + ${count} + |) | + ${priceofallitems} + zł"></a></li>
+        <li>
+            <div th:each="usermail : ${email}">
+                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
+            </div>
+        </li>
     </ul>
 </nav>
+
 <div class="product" th:each="product : ${item}">
     <div class="item">
         <img th:src="${item.getImagePath()}" alt="">
