--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,30 +1,88 @@
 <!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org">
+<!--<html xmlns:th="https://thymeleaf.org">-->
 
 <head>
     <meta charset="UTF-8">
     <title>Orion Store - kosmiczny sklep internetowy</title>
-    <link rel="stylesheet" type="text/css" href="/css/homestyle.css">
+    <link rel="stylesheet" type="text/css" href="/css/cart.css">
 </head>
 
 <body>
+<!--<div th:if="${param.cartisempty}">-->
+<!--    <p>Twój koszyk jest pusty.</p>-->
+<!--</div>-->
+
 <nav>
     <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
+        <li id="admin" sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin}">ADMIN PANEL</a>
+        </li>
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
         <li><a th:href="@{/categories}">Kategorie</a></li>
-        <li><a href="">Koszyk</a></li>
         <li>
-                <div th:each="usermail : ${email}">
-                    <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
-                    <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
-                </div>
+            <div th:each="usermail : ${email}">
+                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
+            </div>
         </li>
     </ul>
 </nav>
+
+<div class="form">
+    <form name="Form1" action="mypage.asp" method="get">
+        <label for="vatnumber">NIP:</label>
+        <input type="text" id="vatnumber" th:value="${userfields.getVatNumber()}"
+               placeholder="Uzupełnij NIP (Opcjonalne)">
+        <label for="organisationname">Nazwa firmy:</label>
+        <input type="text" id="organisationname" th:value="${userfields.getOrganisationName()}"
+               placeholder="Nazwa firmy (Opcjonalne)">
+        <label for="firstname">Imię:</label>
+        <p id="firstname" th:text="${userfields.getFirstName()}"></p>
+        <label for="lastname">Nazwisko</label>
+        <p id="lastname" th:text="${userfields.getLastName()}"></p>
+        <label for="email">Adres e-mail:</label>
+        <p id="email" th:text="${userfields.getEmail()}"></p>
+        <label for="address">Adres:</label>
+        <input type="text" id="address" th:value="${userfields.getAddress()}" placeholder="Uzupełnij adres (Wymagane)">
+        <label for="postalcode">Kod pocztowy:</label>
+        <input type="text" id="postalcode" th:value="${userfields.getPostalCode()}"
+               placeholder="Uzupełnij kod pocztowy (Wymagane)">
+        <label for="city">Miasto:</label>
+        <input type="text" id="city" th:value="${userfields.getCity()}" placeholder="Uzupełnij kod pocztowy (Wymagane)">
+        <label for="telephonenumber">Numer telefonu:</label>
+        <input type="text" id="telephonenumber" th:value="${userfields.getCity()}"
+               placeholder="Uzupełnij kod pocztowy (Wymagane)">
+    </form>
 </div>
+
+<table id="example">
+    <thead>
+    <tr>
+        <th colspan="4">Twój koszyk:</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="iteminfo : ${cartitems}">
+        <td th:text="${iteminfo.getItem().itemName}"></td>
+        <td th:text="${iteminfo.getTotalItems()}"></td>
+        <td><img th:src="${iteminfo.getItem().getImagePath()}"></td>
+        <td th:text="${iteminfo.getTotalPrices()}"></td>
+        <td>
+            <a th:href="@{/cart/deleteposition/{id} (id=${iteminfo.getId()})}">
+                <button>Usuń</button>
+            </a>
+    <tr>
+        <td colspan="4">
+            <button>Zamów</button>
+        </td>
+
+
+    </tr>
+    </tbody>
+</table>
 
 </body>
 
