--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -10,12 +10,26 @@
 <nav>
     <a th:href="@{/}"><img src="/css/logo.png" class="logo" alt="OrionStore"></a>
     <ul>
-        <li><a href="#">Kategorie</a></li>
-        <li><a href="">Ustawienia</a></li>
+        <li id="admin" sec:authorize="hasAuthority('ADMIN')">
+            <a th:href="@{/admin}">ADMIN PANEL</a>
+        </li>
+        <li><a href="">O nas</a></li>
+        <li><a href="">Regulamin</a></li>
+        <li><a href="">Promocje</a></li>
+        <li><a th:href="@{/categories}">Kategorie</a></li>
+        <li><a th:href="@{/cart}" th:text="|Koszyk:(| + ${count} + |) | + ${priceofallitems} + zł"></a></li>
+        <li>
+            <div th:each="usermail : ${email}">
+                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
+            </div>
+        </li>
     </ul>
 </nav>
+<div class="hello">
+    <p th:text="${username}"></p>
+</div>
 
-<h1>Witaj użytkowniku, wybierz odopowiednią dla siebie kategorię.</h1>
 <div th:each="category : ${categories}">
 <a th:href="@{/category/{id} (id=${category.getCategoryId()})}">
     <button th:text="${category.getCategoryName()}"></button>
