A lot of changes (pdf creating, order mechanisms, mailsending) and fixes added 03.03

--- a/src/main/resources/static/css/cardstyle.css
+++ b/src/main/resources/static/css/cardstyle.css
@@ -115,3 +115,9 @@ button:hover {
     color: green;
     font-size: 19px;
 }
+
+#admin {
+    color: #ffffff;
+    background-color: black;
+    font-size: 19px;
+}
