--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -121,11 +121,7 @@ td img {
 
 table {
     margin-top: 3%;
-    margin-bottom: 3%;
-    border-collapse: collapse;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+    white-space: nowrap;
 }
 
 tbody tr:nth-child(odd) {
@@ -142,14 +138,23 @@ td img {
     border-radius: 50%;
 }
 
-div.form
-{
-    display: block;
-    text-align: center;
+.order {
+    margin-top: 15%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
 }
-form
-{
-    display: inline-block;
-    margin-left: 25%;
-    margin-right: 25%;
+
+.container {
+    display: flex block;
+}
+
+.toomany p {
+    color: #be0202;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 3%;
+
 }
