--- a/src/main/resources/templates/itemmodify.html
+++ b/src/main/resources/templates/itemmodify.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Orion Store - kosmiczny sklep internetowy</title>
@@ -45,7 +45,7 @@
         <tr>
             <td>Ilość sztuk:</td>
             <td><input type="number" id="quantity"
-                       th:field="*{quantity}" name="quantity" min="1" max="50000"
+                       th:field="*{quantity}" name="quantity" min="0" max="50000"
                        placeholder="1000"></td>
             <td th:text="| Poprzednio: | + ${item.getQuantity()}"></td>
             <br>
