--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -85,10 +85,13 @@ nav a img {
 }
 
 .item img {
-    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 60%;
-    margin: 5px;
-    border: 1px rgba(171, 43, 43, 1);
+    padding: 10px;
+    margin: auto;
+
 }
 
 .item p {
