--- a/src/main/resources/templates/additem.html
+++ b/src/main/resources/templates/additem.html
@@ -38,7 +38,7 @@
         <tr>
             <td>Ilość sztuk:</td>
             <td><input type="number" id="quantity" th:field="*{quantity}" name="quantity" min="0" max="50000"
-                       placeholder="1000"></td>
+                       placeholder="1000" required></td>
             <br>
         </tr>
         <tr>
