--- a/src/main/resources/templates/categorymodify.html
+++ b/src/main/resources/templates/categorymodify.html
@@ -17,6 +17,7 @@
     </ul>
 </nav>
 
+
 <h1>Modyfikuj kategorię</h1>
 <form th:href="@{/admin/category/modify/{id}}" method="post" th:object="${category}" th:each="category : ${categorytomodify}"
       class="form">
@@ -28,7 +29,7 @@
             <br>
         </tr>
         <tr>
-            <td>
+            <td colspan="2">
                 <a th:href="@{/admin/category/modify/{id}}">
                 <button type="submit">Zmień nazwę</button>
                 </a>
@@ -36,6 +37,10 @@
         </tr>
     </table>
 </form>
+
+<div class="error" th:if="${param.fail}">
+    <p>Kategoria już istnieje. Wpisz inną nazwę kategorii.</p>
+</div>
 
 </body>
 
