--- a/src/main/resources/templates/emptycart.html
+++ b/src/main/resources/templates/emptycart.html
@@ -14,27 +14,25 @@
         <li id="admin" sec:authorize="hasAuthority('ADMIN')">
             <a th:href="@{/admin}">ADMIN PANEL</a>
         </li>
-        <li><a href="">O nas</a></li>
+        <li><a th:href="@{/myorders}">Moje zamówienia</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
         <li><a th:href="@{/categories}">Kategorie</a></li>
         <li>
-            <div th:each="usermail : ${email}">
-                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
-                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
-            </div>
+            <div th:if="${email} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+            <div th:if="${email} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
         </li>
     </ul>
 </nav>
 
 <div class="container">
-<table id="example">
-    <thead>
-    <tr>
-        <th colspan="4">Twój koszyk jest pusty. Dodaj produkty do koszyka.</th>
-    </tr>
-    </tbody>
-</table>
+    <table id="example">
+        <thead>
+        <tr>
+            <th colspan="4">Twój koszyk jest pusty. Dodaj produkty do koszyka.</th>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 
