--- a/src/main/resources/templates/productcard.html
+++ b/src/main/resources/templates/productcard.html
@@ -14,16 +14,14 @@
         <li id="admin" sec:authorize="hasAuthority('ADMIN')">
             <a th:href="@{/admin}">ADMIN PANEL</a>
         </li>
-        <li><a href="">O nas</a></li>
+        <li><a th:href="@{/myorders}">Moje zamówienia</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
         <li><a th:href="@{/categories}">Kategorie</a></li>
         <li><a th:href="@{/shoppingcart}" th:text="|Koszyk:(| + ${count} + |) | + ${priceofallitems} + zł"></a></li>
         <li>
-            <div th:each="usermail : ${email}">
-                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
-                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
-            </div>
+            <div th:if="${email} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+            <div th:if="${email} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
         </li>
     </ul>
 </nav>
