--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -14,15 +14,13 @@
         <li id="admin" sec:authorize="hasAuthority('ADMIN')">
             <a th:href="@{/admin}">ADMIN PANEL</a>
         </li>
-        <li><a href="">O nas</a></li>
+        <li><a th:href="@{/myorders}">Moje zamówienia</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
         <li><a th:href="@{/categories}">Kategorie</a></li>
         <li>
-            <div th:each="usermail : ${email}">
-                <div th:if="${usermail} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
-                <div th:if="${usermail} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
-            </div>
+                <div th:if="${userfields.getEmail()} eq 'anonymousUser'" class="login"><a th:href="@{/login}">Logowanie</a></div>
+                <div th:if="${userfields.getEmail()} ne 'anonymousUser'" class="login"><a th:href="@{/logout}">Wyloguj</a></div>
         </li>
     </ul>
 </nav>
@@ -71,7 +69,7 @@
         <td><img th:src="${iteminfo.getItem().getImagePath()}"></td>
         <td th:text="${ T(java.lang.String).format('%.2f', iteminfo.getTotalPrices() * iteminfo.getTotalItems())} + zł"></td>
         <td>
-            <a th:href="@{/cart/deleteposition/{id} (id=${iteminfo.getId()})}">
+            <a th:href="@{/shoppingcart/deleteposition/{id} (id=${iteminfo.getId()})}">
                 <button>Usuń</button>
             </a>
         </td>
